--- a/index.html
+++ b/index.html
@@ -3,17 +3,146 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>هوشان سیستم - پلتفرم دوقلوهای دیجیتال</title>
-    <script>
-        // Redirect to landing page
-        window.location.replace('landing.html');
-    </script>
+    <title>شرکت حسابداری هوشان سیستم - خدمات حسابداری و مالی</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div style="text-align: center; padding: 50px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
-        <h1>در حال انتقال...</h1>
-        <p>اگر به طور خودکار منتقل نشدید، <a href="landing.html">اینجا کلیک کنید</a></p>
-    </div>
+    <!-- Header -->
+    <header class="header">
+        <div class="container">
+            <div class="logo">
+                <h1>شرکت حسابداری هوشان سیستم</h1>
+                <span>خدمات حسابداری، مالیاتی و مشاوره مالی حرفه‌ای</span>
+            </div>
+        </div>
+    </header>
 
+    <!-- Navigation -->
+    <nav class="nav">
+        <div class="container">
+            <ul>
+                <li><a href="index.html" class="active">صفحه اصلی</a></li>
+                <li class="dropdown">
+                    <a href="services.html">خدمات ما</a>
+                    <div class="dropdown-content">
+                        <a href="bookkeeping.html">حسابداری و دفترداری</a>
+                        <a href="tax-services.html">خدمات مالیاتی</a>
+                        <a href="audit.html">حسابرسی</a>
+                        <a href="financial-consulting.html">مشاوره مالی</a>
+                        <a href="payroll.html">حقوق و دستمزد</a>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <a href="accounting-software.html">نرم‌افزار حسابداری</a>
+                    <div class="dropdown-content">
+                        <a href="accounting-software.html">معرفی نرم‌افزار</a>
+                        <a href="software-features.html">ویژگی‌ها و قابلیت‌ها</a>
+                        <a href="software-modules.html">ماژول‌های نرم‌افزار</a>
+                        <a href="software-pricing.html">قیمت‌گذاری</a>
+                        <a href="software-support.html">پشتیبانی و آموزش</a>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <a href="accounting-info.html">اطلاعات حسابداری</a>
+                    <div class="dropdown-content">
+                        <a href="accounting-principles.html">اصول حسابداری</a>
+                        <a href="financial-statements.html">صورت‌های مالی</a>
+                        <a href="tax-laws.html">قوانین مالیاتی</a>
+                        <a href="accounting-standards.html">استانداردهای حسابداری</a>
+                    </div>
+                </li>
+                <li><a href="about.html">درباره ما</a></li>
+                <li><a href="contact.html">تماس با ما</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Main Content -->
+    <main class="main">
+        <div class="container">
+            <div class="page-header">
+                <h1>خوش آمدید به شرکت حسابداری هوشان سیستم</h1>
+                <p>ارائه خدمات حرفه‌ای حسابداری، مالیاتی و مشاوره مالی از سال ۱۳۸۰</p>
+            </div>
+
+            <div class="content-section">
+                <h2>درباره شرکت</h2>
+                <p>شرکت حسابداری هوشان سیستم با بیش از ۲۰ سال سابقه در زمینه ارائه خدمات حسابداری، مالیاتی و مشاوره مالی، یکی از معتبرترین شرکت‌های حسابداری در کشور می‌باشد. ما با تیمی متشکل از حسابداران رسمی، کارشناسان مالیاتی و مشاوران مالی مجرب، آماده ارائه خدمات به شرکت‌ها، مؤسسات و اشخاص حقیقی هستیم.</p>
+                <p>هدف ما ارائه خدمات با کیفیت و مطابق با آخرین استانداردهای حسابداری و قوانین مالیاتی است تا مشتریان ما بتوانند با اطمینان خاطر به فعالیت‌های تجاری خود بپردازند.</p>
+            </div>
+
+            <div class="two-column">
+                <div class="column">
+                    <h3>خدمات اصلی ما</h3>
+                    <ul>
+                        <li>حسابداری و دفترداری کامل</li>
+                        <li>تهیه و تنظیم صورت‌های مالی</li>
+                        <li>خدمات مالیاتی و تنظیم اظهارنامه</li>
+                        <li>حسابرسی داخلی و خارجی</li>
+                        <li>مشاوره مالی و سرمایه‌گذاری</li>
+                        <li>محاسبه حقوق و دستمزد</li>
+                        <li>نظارت بر سیستم‌های مالی</li>
+                        <li>آموزش حسابداری</li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <h3>چرا ما را انتخاب کنید؟</h3>
+                    <ul>
+                        <li>بیش از ۲۰ سال تجربه در زمینه حسابداری</li>
+                        <li>تیم متخصص و با تجربه</li>
+                        <li>رعایت کامل استانداردهای حسابداری</li>
+                        <li>به‌روز بودن با آخرین قوانین مالیاتی</li>
+                        <li>خدمات سریع و دقیق</li>
+                        <li>هزینه‌های مناسب و رقابتی</li>
+                        <li>پشتیبانی کامل و مستمر</li>
+                        <li>رعایت محرمانگی اطلاعات</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="content-section">
+                <h2>خدمات تخصصی</h2>
+                <div class="service-card">
+                    <h4>حسابداری و دفترداری</h4>
+                    <p>ثبت تمامی معاملات مالی، نگهداری دفاتر قانونی، تهیه تراز آزمایشی و گزارش‌های مالی ماهانه و سالانه مطابق با استانداردهای حسابداری ایران.</p>
+                    <a href="bookkeeping.html" class="btn">اطلاعات بیشتر</a>
+                </div>
+                <div class="service-card">
+                    <h4>خدمات مالیاتی</h4>
+                    <p>تنظیم و ارسال اظهارنامه مالیاتی، محاسبه مالیات، مشاوره در زمینه قوانین مالیاتی و حل مشکلات مالیاتی مشتریان.</p>
+                    <a href="tax-services.html" class="btn">اطلاعات بیشتر</a>
+                </div>
+                <div class="service-card">
+                    <h4>حسابرسی</h4>
+                    <p>انجام حسابرسی مستقل، حسابرسی داخلی، بررسی سیستم‌های کنترل داخلی و ارائه گزارش‌های حسابرسی مطابق با استانداردهای حسابرسی.</p>
+                    <a href="audit.html" class="btn">اطلاعات بیشتر</a>
+                </div>
+                <div class="service-card">
+                    <h4>مشاوره مالی</h4>
+                    <p>مشاوره در زمینه مدیریت مالی، بودجه‌ریزی، تحلیل مالی، ارزیابی پروژه‌ها و تصمیم‌گیری‌های مالی.</p>
+                    <a href="financial-consulting.html" class="btn">اطلاعات بیشتر</a>
+                </div>
+            </div>
+
+            <div class="info-box">
+                <h3>توجه مهم</h3>
+                <p>تمام خدمات ما مطابق با استانداردهای حسابداری ایران و قوانین مالیاتی انجام می‌شود. ما متعهد به حفظ محرمانگی اطلاعات مالی مشتریان خود هستیم.</p>
+            </div>
+        </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-links">
+                <a href="index.html">صفحه اصلی</a>
+                <a href="services.html">خدمات</a>
+                <a href="about.html">درباره ما</a>
+                <a href="contact.html">تماس با ما</a>
+            </div>
+            <p>&copy; ۱۴۰۳ شرکت حسابداری هوشان سیستم. تمامی حقوق محفوظ است.</p>
+            <p>آدرس: تهران، اشرفی اصفهانی، برج نگین رضا، طبقه ۱۹، واحد ۱۹۰۶ | تلفن: ۰۲۱-۴۴۰۳۰۳۷۰ - ۰۲۱-۴۴۰۳۰۳۶۹ - ۰۹۱۲۳۱۶۴۵۸۶ | ایمیل: info@hooshansystem.ir</p>
+        </div>
+    </footer>
 </body>
 </html>
