--- a/index.html
+++ b/index.html
@@ -124,6 +124,41 @@
                 </div>
             </div>
 
+            <div class="content-section" style="background-color: #e8f4f8; border-left: 4px solid #3498db;">
+                <h2>نرم‌افزار حسابداری هوشان سیستم</h2>
+                <p>علاوه بر ارائه خدمات حسابداری، ما نرم‌افزار حسابداری جامع و پیشرفته‌ای را برای شرکت‌ها و مؤسسات بزرگ توسعه داده‌ایم. این نرم‌افزار با بیش از ۱۵ سال تجربه در زمینه توسعه سیستم‌های مالی، طراحی شده است تا نیازهای پیچیده شرکت‌های بزرگ را برآورده کند.</p>
+                
+                <div class="two-column" style="margin-top: 20px;">
+                    <div class="column">
+                        <h3>ویژگی‌های کلیدی</h3>
+                        <ul>
+                            <li>سیستم چند کاربره با کنترل دسترسی پیشرفته</li>
+                            <li>پایگاه داده قدرتمند و امن</li>
+                            <li>گزارش‌گیری پیشرفته و قابل تنظیم</li>
+                            <li>یکپارچگی با سیستم‌های دیگر</li>
+                            <li>پشتیبان‌گیری خودکار</li>
+                            <li>رعایت استانداردهای حسابداری ایران</li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h3>ماژول‌های نرم‌افزار</h3>
+                        <ul>
+                            <li>حسابداری عمومی و صنعتی</li>
+                            <li>انبارداری و موجودی</li>
+                            <li>فروش و خرید</li>
+                            <li>حقوق و دستمزد</li>
+                            <li>دارایی ثابت</li>
+                            <li>خزانه‌داری</li>
+                            <li>گزارش‌گیری جامع</li>
+                        </ul>
+                    </div>
+                </div>
+                
+                <div style="text-align: center; margin-top: 25px;">
+                    <a href="accounting-software.html" class="btn btn-primary" style="font-size: 16px; padding: 15px 30px;">اطلاعات بیشتر درباره نرم‌افزار</a>
+                </div>
+            </div>
+
             <div class="info-box">
                 <h3>توجه مهم</h3>
                 <p>تمام خدمات ما مطابق با استانداردهای حسابداری ایران و قوانین مالیاتی انجام می‌شود. ما متعهد به حفظ محرمانگی اطلاعات مالی مشتریان خود هستیم.</p>
